--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </div>
 
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Challenge by <a href="https://amanraj5149.github.io/CV/" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Aman Raj</a>.
   </div>
 </body>
