--- a/index.html
+++ b/index.html
@@ -5,45 +5,64 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <!--       --------------------------style - sheet--------------------------------        -->
+  <link rel="stylesheet" href="style.css">
+  <!--      ------------Google fonts (font awesome, 300, 400, 600)----------------        -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
 
   <title>Frontend Mentor | NFT preview card component</title>
 
 </head>
+
 <body>
+  <main>
 
-  <div class="container">
+      <div class="container">
 
-    <article class="article-nft-img">
-      <img src="images/image-equilibrium.jpg" alt="nft-img" class="nft-img">
-      <div> <img src="images/icon-view.svg" alt="icon-view.svg"> </div>
-    </article>
+         <div class="card-img">
+           <img class="nft-img"src="images\image-equilibrium.jpg" alt="">
+          <div class="active-state"> <img class="active-img"src="images\icon-view.svg" alt=""></div>
+         </div>
+
+       <div class="container-body">
+         <h1> Equilibrium #3429 </h1>
+         <p> Our Equilibrium collection promotes balance and calm. </p>
+       </div>
+
+       <div class="pricing">
+       <div class="icon-storage">
+         <img src="images\icon-ethereum.svg" alt="">
+         <p class="price-tag"> 0.041 ETH </p>
+       </div>
+       <div class="icon-storage">
+         <img src="images\icon-clock.svg" alt="">
+         <p> 3 days left </p>
+       </div>
+       </div>
+
+        <hr>
+
+       <div class="avatar-div">
+         <img class="avatar-img" src="images\image-avatar.png" alt="">
+         <p> Creation of <span> Jules Wyvern </span> </p>
+       </div>
+
+      </div>
 
 
-    <h2> Equilibrium #3429 </h2>
-    <p> Our Equilibrium collection promotes balance and calm. </p>
 
-    <ul>
-      <li> <img src="images/icon-ethereum.svg" alt="ethereum-icon" class="ul-icon-image"> 0.041 ETH </li>
-      <li> <img src="images/icon-clock.svg" alt="clock-icon" class="ul-icon-image"> 3 days left</li>
-    </ul>
-
-    <hr>
-
-    <article class="avtar-container">
-     <img src="images\image-avatar.png" alt="avtar-img" class="avtar-img">
-     <p> Creation of <span> Jules Wyvern </span> </p>
-    </article>
-
-
-  </div>
-
-  <div class="attribution">
+   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Aman Raj</a>.
+    Coded by <a href="https://amanraj5149.github.io/CV/">Aman Raj</a>.
   </div>
+
+  </main>
+
+
+
+
 </body>
+
 </html>
